// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.privacybudgetmanager.api.v2alpha;

option java_package = "org.wfanet.measurement.privacybudgetmanager.api.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "Charges";


message PrivacyLandscape{
  
  // Name of this PrivacyLandscape
  String name  =  1;

  // Qualifying name of the top level message e.g. UKEventTemplate.TestEvent
  String eventTemplateName = 2;

  // Representing all possible values for each of the Dimensions 
  repeated Dimension dimensions = 3;

  message Dimension {
     
     // Although repeated fields are sorted, order of the dimensions
     // are really important since they define the bucket index, 
     // hence we include an order field.
     int order = 1; 
     
     // Qualifying name that will be used in the proto reflection 
     // on the event template. e.g. person.age or person.geo
     String name = 2; 
     
     // All possible values that this dimension can take for PBM. 
     // will be used in the proto reflection to filter buckets.
     Repeated Value values = 3;

     message Value {
       oneof option {
         // E.g 18_24 for Age
         string enumValue = 1;
         // E.g 23 for Geo Code
         int32 intValue = 2;
          // E.g 0.1 some watch time?
         float floatValue = 3;
       }
     }
  }
}
